doctorapp/force-app/main/default/objects/System_Setting__c/System_Setting__c.object-meta.xml
<CustomObject>
    <description>Global configuration key-value store.</description>
    <label>System Setting</label>
    <nameField>
        <displayFormat>SET-{00000}</displayFormat>
        <label>Setting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>