doctorapp/force-app/main/default/objects/System_Setting__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>e.g. General, Tax, Receipt.</description>
    <label>Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>