doctorapp/force-app/main/default/objects/System_Setting__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Setting key (e.g. store_name).</description>
    <externalId>true</externalId>
    <label>Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>