doctorapp/force-app/main/default/objects/System_Setting__c/fields/Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Updated_By__c</fullName>
    <description>Who last changed this setting.</description>
    <label>Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>POS System Settings</relationshipLabel>
    <relationshipName>POS_System_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>