doctorapp/force-app/main/default/objects/System_Setting__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Setting value (may be JSON). Required via validation rule.</description>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>