doctorapp/force-app/main/default/objects/System_Setting__c/validationRules/Value_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_Required</fullName>
    <active>true</active>
    <description>A setting must carry a value (long text areas cannot be flagged required).</description>
    <errorConditionFormula>LEN(TRIM(Value__c)) = 0</errorConditionFormula>
    <errorMessage>Value is required.</errorMessage>
    <errorDisplayField>Value__c</errorDisplayField>
</ValidationRule>